--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="#about" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">About</a>
                   </li>
                   <li class="group">
-                    <a href="#portfolio" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Portfolio</a>
+                    <a href="#portfolio" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Produk</a>
                   </li>
                   <li class="group">
                     <a href="#clients" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Clients</a>
@@ -203,28 +203,28 @@
           <div class="flex w-full flex-wrap justify-center px-4 xl:mx-auto xl:w-10/12">
             <div class="mb-12 p-4 md:w-1/2">
               <div class="overflow-hidden rounded-md shadow-md">
-                <img src="dist/img/portfolio/1.png" alt="Landing Page" width="w-full" />
+                <img src="public/Louis Vuitton- Nuit De Feu.jpg" alt="Landing Page" width="w-full" />
               </div>
-              <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Landing Page</h3>
+              <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Ros-gold</h3>
               <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
             </div>
             <div class="mb-12 p-4 md:w-1/2">
               <div class="overflow-hidden rounded-md shadow-md">
-                <img src="dist/img/portfolio/2.png" alt="E-Commerce" width="w-full" />
+                <img src="public/Louis Vuitton- Nuit De Feu.jpg" alt="E-Commerce" width="w-full" />
               </div>
               <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">E-Commerce</h3>
               <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
             </div>
             <div class="mb-12 p-4 md:w-1/2">
               <div class="overflow-hidden rounded-md shadow-md">
-                <img src="dist/img/portfolio/3.png" alt="Technical Documentation" width="w-full" />
+                <img src="public/Louis Vuitton- Nuit De Feu.jpg" alt="Technical Documentation" width="w-full" />
               </div>
               <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Technical Documentation</h3>
               <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
             </div>
             <div class="mb-12 p-4 md:w-1/2">
               <div class="overflow-hidden rounded-md shadow-md">
-                <img src="dist/img/portfolio/4.png" alt="Tribute Page" width="w-full" />
+                <img src="public/Louis Vuitton- Nuit De Feu.jpg" alt="Tribute Page" width="w-full" />
               </div>
               <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Tribute Page</h3>
               <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
@@ -248,7 +248,7 @@
           <div class="w-full px-4">
             <div class="flex flex-wrap items-center justify-center">
               <a href="#" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
-                <img src="dist/img/clients/google.svg" alt="Google" />
+                <img src="public/clients/225px-Logo_SMK_Negeri_4_Tasikmalaya.png" alt="SMKN4-Tasikmalaya" />
               </a>
               <a href="#" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
                 <img src="dist/img/clients/gojek.svg" alt="Gojek" />
@@ -384,10 +384,10 @@
                   <a href="#home" class="mb-3 inline-block text-base hover:text-primary">Beranda</a>
                 </li>
                 <li>
-                  <a href="#about" class="mb-3 inline-block text-base hover:text-primary">Tentang Saya</a>
+                  <a href="#about" class="mb-3 inline-block text-base hover:text-primary">About</a>
                 </li>
                 <li>
-                  <a href="#portfolio" class="mb-3 inline-block text-base hover:text-primary">Portfolio</a>
+                  <a href="#portfolio" class="mb-3 inline-block text-base hover:text-primary">Produk</a>
                 </li>
                 <li>
                   <a href="#clients" class="mb-3 inline-block text-base hover:text-primary">Clients</a>
